crates/mcc/src/snapshots/mcc__types__tests__comment.snap
---
source: crates/mcc/src/types.rs
description: /* */
expression: formatted
---
(translation_unit
  (comment))
