crates/mcc/src/snapshots/mcc__types__tests__declaration.snap
---
source: crates/mcc/src/types.rs
description: int x;
expression: formatted
---
(translation_unit
  (declaration
    type: (primitive_type)
    declarator: (identifier)
    (";")))
