crates/mcc/src/snapshots/mcc__types__tests__field.snap
---
source: crates/mcc/src/types.rs
expression: formatted
---
(translation_unit
  (declaration
    type: (primitive_type)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list
        (()
        (parameter_declaration
          type: (primitive_type))
        ())))
    (MISSING ";")))
