crates/mcc/src/snapshots/mcc__types__tests__field_with_spaces_and_newlines_and_tabs.snap
---
source: crates/mcc/src/types.rs
expression: formatted
---
(translation_unit
  (ERROR
    (identifier)
    (:)
    type: (type_identifier)
    (identifier)
    (identifier)))
