crates/mcc/src/snapshots/mcc__types__tests__function_call.snap
---
source: crates/mcc/src/types.rs
description: void main(void)
expression: formatted
---
(translation_unit
  (declaration
    type: (primitive_type)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list
        ("(")
        (parameter_declaration
          type: (primitive_type))
        (")")))
    (MISSING ";")))
