crates/mcc/src/snapshots/mcc__types__tests__function_call_with_spaces_and_newlines.snap
---
source: crates/mcc/src/types.rs
expression: formatted
---
(translation_unit
  (ERROR
    type: (primitive_type)
    (())
  (expression_statement
    (;)))
