crates/mcc/src/snapshots/mcc__types__tests__function_definition.snap
---
source: crates/mcc/src/types.rs
description: void main();
expression: formatted
---
(translation_unit
  (declaration
    type: (primitive_type)
    declarator: (function_declarator
      declarator: (identifier)
      parameters: (parameter_list
        ("(")
        (")")))
    (";")))
