crates/mcc/src/snapshots/mcc__types__tests__one_element.snap
---
source: crates/mcc/src/types.rs
expression: formatted
---
(translation_unit
  (declaration
    type: (primitive_type)
    declarator: (identifier)
    (;)))
