crates/mcc/src/snapshots/mcc__types__tests__unclosed_paren.snap
---
source: crates/mcc/src/types.rs
description: int (
expression: formatted
---
(translation_unit
  (ERROR
    type: (primitive_type)
    ("(")))
